# image-loader-imagenet

./: .gitignore  example.py  pyproject.toml  ruff.toml
src/cog_cv_imagenet/: __init__.py
src/cog_cv_imagenet/dataset/: __init__.py  cog_dataset.py  torch_dataset.py
src/cog_cv_imagenet/label_mapper/: mapper_utils.py
src/cog_cv_imagenet/label_mapper/metadata/: imagenet_to_coco.py
src/cog_imagenet/: imagenet.py
src/cog_imagenet/dataset/: cog_dataset.py  torch_dataset.py
src/cog_imagenet/label_mapper/: __init__.py
src/cog_imagenet/label_mapper/metadata/: __init__.py
src/cog_imagenet/torch_dataset/: __init__.py  imagenet_torch_dataset.py
