[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cog_cv_imagenet"
version = "0.0.1"
description = "A Coargus's ImageNet loader."
authors = [{ name = "Minkyu Choi", email = "minkyu.choi@coargus.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
]

[project.optional-dependencies]
dev = ["black", "flake8", "mypy"]
test = ["pytest>=6.0", "pytest-cov"]

[project.urls]
homepage = "https://github.com/Coargus/image-loader-imagenet"
documentation = "https://github.com/Coargus/image-loader-imagenet/docs"
repository = "https://github.com/Coargus/image-loader-imagenet"
